# William_Blair_DE_test

./: .gitignore  BUSINESS_CHECKS.md  DATA_QUALITY.xlsx  README.md  pyproject.toml
data/: acquirer_financials.csv  acquirers.csv  sector_multiples.csv  targets.csv  transactions.csv
sample_output_data/: MANIFEST.txt  dim_acquirer_activity.csv  fct_transactions.csv  rpt_sector_trend_summary.csv
scripts/: build_data_quality_xlsx.py  dagster_dev.sh  export_sample_outputs.py  reset_warehouse.py
william_blair_de/: __init__.py  definitions.py  materialization_context.py  partitions.py  resources.py  schedules.py  sensors.py
william_blair_de/assets/: __init__.py  analytics.py  business_checks.py  checks.py  dimensions.py  raw.py  staging.py
